update preprint -> paper

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                               </div>
                               <div class="face face2">
                                 <div class="content">
-                                    <p><strong>Clozapine and ANC </strong><br> <a href ="https://www.medrxiv.org/content/10.1101/2023.08.22.23294262v1"> Preprint</a> and <a href ="https://locksk.github.io/clozuk3-anc/"> Markdown </a></p>
+                                    <p><strong>Clozapine and ANC </strong><br> <a href ="https://www.nature.com/articles/s41537-023-00404-6"> Paper </a> and <a href ="https://locksk.github.io/clozuk3-anc/"> Markdown </a></p>
                                     <br>                            
                               </div>
                            </div>
