--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                               </div>
                               <div class="face face2">
                                 <div class="content">
-                                    <p><b>Teaching:</b> Pharmacogenomics of Schizophrenia (UG Medic Practical Reserch Experience) <a href ="https://locksk.github.io/PRE-introduction/"> Intro </a> and <a href ="https://locksk.github.io/PRE-practical/"> Practical </a></p>
+                                    <p><b>Teaching:</b> Pharmacogenomics of Schizophrenia <a href ="https://locksk.github.io/PRE-introduction/"> Intro </a> and <a href ="https://locksk.github.io/PRE-practical/"> Practical </a></p>
                                     <br>
                                     <p><b>Community:</b> Life Sciences Challenge (Helping to design and deliver an inter-schools science quiz competition.) </p>
                                     
